Bug 126024 - FILESAVE XLSX Hyperlink on formula cell lost
Summary: FILESAVE XLSX Hyperlink on formula cell lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks: XLSX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-06-20 14:08 UTC by NISZ LibreOffice Team
Modified: 2019-06-26 06:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (18.91 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-20 14:10 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (19.26 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-20 14:10 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document Excel with hyperlink on formula cell (68.74 KB, image/png)
2019-06-20 14:10 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document in Excel with hyperlink lost (68.63 KB, image/png)
2019-06-20 14:11 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-06-20 14:08:35 UTC
Description:
Attached document contains some hyperlinks on cells containing formulas in row 6.
This is part of bug #89633 in case of XLSX format.


Steps to Reproduce:
Steps to reproduce:
1.	Open the attached file in Calc
2.	Save the file as XLSX


Actual Results:
The hyperlinks on B6-D6 are not saved.

Expected Results:
Hyperlinks are retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-06-20 14:10:11 UTC
Created attachment 152311 [details]
Example file from Excel
Comment 2 NISZ LibreOffice Team 2019-06-20 14:10:26 UTC
Created attachment 152312 [details]
The original file saved by Calc
Comment 3 NISZ LibreOffice Team 2019-06-20 14:10:48 UTC
Created attachment 152313 [details]
Screenshot of the original document Excel with hyperlink on formula cell
Comment 4 NISZ LibreOffice Team 2019-06-20 14:11:13 UTC
Created attachment 152314 [details]
Screenshot of the exported document in Excel with hyperlink lost
Comment 5 Tünde Tóth 2019-06-20 14:21:06 UTC
Confirmed with:

Version: 6.3.0.0.beta1+ (x86)
Build ID: 5cfac16dbd4af456a7fb6d52c8953c69a72ba2ba
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 6 Commit Notification 2019-06-21 13:20:03 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1bdbdc6ebcdba2784dcfa56b50632c4706ba14b5%5E%21

tdf#126024 XLSX export: fix hyperlink on formula cell

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-06-26 06:27:55 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/861ee491b0bf3ca1c18336924017911a1823cc31%5E%21

tdf#126024 XLSX export: fix hyperlink on formula cell

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.