tdf#126024 XLSX export: fix hyperlink on formula cell

Hyperlink on formula cell lost after export.

Change-Id: I682c8bb559b5adde84b350f79c35a2e769f106ec
Reviewed-on: https://gerrit.libreoffice.org/74457
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1bdbdc6ebcdba2784dcfa56b50632c4706ba14b5)